# MiniCPM-2B-TPU

./: .gitignore  README.md  README_DEMO.md
compile/: compile2.sh  compile_bm1684x.sh
cpp/: README.md
demo/: CMakeLists.txt  README.md  demo.cpp
demo/lib_soc_bm1684x/: libbmlib.so.0
docs/: FAQ.md  MiniCPM-2B_Export_Guide.md
python/: minicpm.py  requirements.txt
python/token_config/: tokenizer.py
scripts/: download.sh  gen_bmodel.sh
scripts/compile/: compile_bm1684x.sh  compile_bm1688.sh
tools/: export_onnx.py
